[project]
name = "vllm-serve"
version = "0.1.0"
description = "Production-ready LLM serving with vLLM and FastAPI"
requires-python = ">=3.12"
dependencies = [
    "vllm>=0.11",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
]

[project.scripts]
vllm-serve = "vllm_serve.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vllm_serve"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
    "httpx>=0.28",
    "pytest-asyncio>=0.25",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["vllm_serve"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
